--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aaron Sachs",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
